--- a/views/index.html
+++ b/views/index.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-	<title><%= title %></title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- css style -->
-	<link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css"
-		media="screen">
-	<link rel='stylesheet' href='/stylesheets/style.css' /> 
-	<!-- javascript library -->
-	<script src="/js/jquery.min.js"></script>
-	<script src="/lib/bootstrap/js/bootstrap.min.js"></script>
-</head>
-<body onload=''>
+<% include header.html %>
+<body class="admin_backgroud_color">
 	<h1 class="text-center"><%= title %></h1>
 	<p class="text-center">Welcome to <%= title %></p>
 </body>
-</html>
+<% include footer.html %>
