--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,3 +17,158 @@
     border-radius: 4px 4px 4px 4px;
     box-shadow: none;
 }
+
+#admin_main_panel_header {
+	padding-left: 15px;
+}
+
+.admin_main_process {
+	position: absolute;
+	top: 45%;
+	width: 40%;
+	left: 30%; 
+}
+
+.admin_main_background { 
+	position: fixed;
+	height: 100%;
+	width: 100%;
+	background: rgba(0, 0, 0, 0.2) none repeat scroll 0% 0%;
+	z-index: 100;
+	display: none;
+	top: 0px;
+	left: 0px;
+}
+
+.admin_main_signout {
+	padding: 10px 15px;
+	margin: 0px;
+}
+
+.admin_main_no_bottom {
+	border-bottom-style: none;
+}
+
+.admin_main_navbar_no_radius_margin {
+	background-color: #fff;
+	border-left-width: 0px;
+	border-right-width: 0px;
+	border-top-style: none;
+    border-right-style: none;
+    border-left-style: none;
+    border-bottom-style: none;
+    border-bottom-right-radius: 0px;
+	border-bottom-left-radius: 0px;
+	margin-bottom: 0px;
+}
+
+.admin_main_no_margin_right {
+	margin-right: 0px;
+}
+
+.admin_main_div {
+	border-bottom-style: none;
+	margin: 0px 10px 10px;
+	/* border-top: 1px solid #E8E8E8; */
+}
+
+.admin_main_home_edit {
+	margin: 10px 0px 0px;
+	padding: 2px;
+	font-size: 16px;
+	border-radius: 3px;
+	height: 100%;
+	width: 60px;
+}
+
+.admin_main_home_warn {
+    position: absolute;
+    margin: 9px 0px 0px 2px;
+    color: #F8B700;
+}
+
+.admin_main_align_right {
+	float : right;
+	margin-left: 15px;
+}
+
+.btn-link:focus, .btn-link:hover {
+	text-decoration: blink;
+}
+
+.admin_main_product_btn {
+	font-size : 16px;
+	padding-top: 0px;
+}
+
+.admin_main_product_combobox {
+	border-style : none;
+}
+
+.admin_main_product_list {
+	padding-left: 0px !important;
+    border-bottom-style: none !important;
+}
+
+.admin_main_product_list_col0 {
+    width : 4%;
+    margin: 0px;
+    padding-bottom: 0px !important;
+    text-align: right;
+}
+
+.admin_main_product_list_col1 {
+	width : 8%;
+}
+
+.admin_main_product_list_col2 {
+    width : 16%;
+}
+
+.admin_main_product_list_col3 {
+    width : 20%;
+}
+
+.admin_main_product_list_col4 {
+    width : 40%;
+}
+
+.admin_main_product_list_col5 {
+    width : 4%;
+}
+
+.admin_main_product_list_col6 {
+	width : 4%;
+}
+
+.admin_main_product_list_col >td {
+	padding-left : 12px !important;
+}
+
+.admin_main_product_list_col >.admin_main_product_list_col_image,
+.admin_main_product_list_col >td span{
+	text-align : center;
+}
+.admin_main_product_list_col >td span {
+cursor: pointer;
+}
+
+.admin_main_product_list_col >td div {
+	margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.admin_main_product_delete_btn {
+	margin: 20px 0px 0px;
+	padding: 5px 10px 5px 10px;
+	font-size: 16px;
+	border-radius: 3px;
+	width: 60px;
+}
+
+.admin_main_product_item_image {
+	margin-right: 5px;
+	margin-left: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
