--- a/views/header.html
+++ b/views/header.html
@@ -5,8 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- css style -->
 	<link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css" media="screen">
-	<link rel='stylesheet' href='/stylesheets/style.css' /> 
+	<link rel='stylesheet' href='/stylesheets/style.css' />
 	<!-- javascript library -->
 	<script src="/lib/jquery/jquery.min.js"></script>
-	<script src="/lib/bootstrap/js/bootstrap.min.js"></script>
+	<script src="/lib/bootstrap/js/bootstrap.js"></script>
+    <script>
+       $(function () { $("[data-toggle='tooltip']").tooltip(); });
+    </script>
 </head>
