--- a/public/template/admin_main/admin_main_product_item.html
+++ b/public/template/admin_main/admin_main_product_item.html
@@ -8,18 +8,9 @@
       </div>
       <div class="modal-body">
         <div class="row" id="image_list">
-          <div class="col-xs-3 admin_main_product_item_image">
-            <a href="#" class="thumbnail">
-              <img src="/images/noimage.jpg" alt="...">
-            </a>
-            <span>Add new Image</span>
-          </div>
-          <div class="col-xs-3 admin_main_product_item_image">
-            <a href="#" class="thumbnail">
-              <span>Add New Image</span>
-            </a>
-          </div>
+         
         </div>
+        <div id="admin_main_update_modal"></div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
