--- a/views/admin/main.html
+++ b/views/admin/main.html
@@ -1,5 +1,5 @@
 <% include ../header.html %>
-<body class="admin_backgroud_color" onload="admin_onload(this)">
+<body class="admin_backgroud_color">
 	<div class="admin_main_panel" id="admin_main_panel_body">
 		<ul class="nav nav-tabs admin_main_no_bottom" id="admin_main_menu">
 		</ul>
@@ -17,8 +17,8 @@
 		  </div>
 		</div>
 	</div>
-	<script src="/js/controller/admin_main_controller.js"></script>
 	<script src="/js/controller/messages.js"></script>
 	<script src="/js/utils/utilsUI.js"></script>
+    <script src="/js/controller/admin_main_controller.js"></script>
 </body>
 <% include ../footer.html %>
